Add missing build step
Required the command:
$ rails javascript:install:esbuild

To set up the build script in package.json to be able to run:
$ bin/dev

--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "private": true,
   "dependencies": {
     "codemirror": "^6.0.2"
+  },
+  "devDependencies": {
+    "esbuild": "^0.25.9"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
   }
 }
