--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^8.0.16",
     "codemirror": "^6.0.2"
   },
   "devDependencies": {
